--- a/app.json
+++ b/app.json
@@ -28,9 +28,19 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router"
+    ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "def34baf-cc29-4e01-a318-1349121de763"
+      }
     }
   }
 }
